--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "legit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Check that email addresses are really able to accept emails",
   "main": "index.js",
+  "devDependencies":{
+    "should": "*",
+    "mocha": "*"
+  },
+  "script":{
+    "test": "mocha"
+  },
   "keywords": [
     "email",
     "check",
