--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "legit",
-  "version": "0.0.5",
-  "description": "Check that email addresses are really able to accept emails",
+  "version": "0.0.6",
+  "description": "Check that email addresses are really able to accept emails by pinging the DNS and checking for active MX records.",
   "main": "index.js",
+  "respository": "https://github.com/martyndavies/legit",
   "devDependencies":{
     "should": "*",
     "mocha": "*"
