update spelling of repository

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "legit",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Check that email addresses are really able to accept emails by pinging the DNS and checking for active MX records.",
   "main": "./src/index.js",
-  "respository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/martyndavies/legit"
   },
